--- a/client/src/components/Device.css
+++ b/client/src/components/Device.css
@@ -1,9 +1,12 @@
 .device {
   border: 1px solid gray;
   border-radius: 10px;
-  margin: 3px auto;
+  margin: 3px;
   padding-bottom: 10px;
   background-color: #505050;
+  display: block;
+  width: 185px;
+  height: 165px;
 }
 
 .power {
@@ -27,7 +30,7 @@
 
 .power > i {
   margin-top: 5px;
-  margin-left: -11px;
+  margin-left: -12px;
 }
 
 .power:before {
